--- a/DDPG/params.yaml
+++ b/DDPG/params.yaml
@@ -1,9 +1,8 @@
 base:
-  wandb_enabled: True
+  wandb_enabled: False
 main:
   update: False
-  update_from: "artifacts/2024/06/27/Run_1/100"
-  live_plot: False
+  update_from: "artifacts/2024/07/01/Run_3/20"
   env_id: 'SafetyPointCircle1-v0'
   render_mode: None
 
@@ -15,16 +14,16 @@ main:
       priority_replay: True
 
 train:
-  num_episodes: 10
+  num_episodes: 2000
   batch_size: 64
   max_steps_per_episode: 250
-  save_every: 5
+  save_every: 250
 
 test:
-  models_dir: "artifacts/2024/06/27/Run_1"
-  model_nums: [100, 500, 1000]
-  num_runs: 10
-  render_mode: None
+  models_dir: "artifacts/2024/07/01/Run_1"
+  model_nums: [2000]
+  num_runs: 5
+  render_mode: 'human'
   max_steps_per_episode: 500
 
 
